# charta-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  process.py  process.sh  test.ch
core/: CMakeLists.txt  core.c  core.h  core.pre.c  core.pre.h
docs/: 10-Start.md  20-Core-Functions.md  30-C-FFI.md  40-Types.md
editors/emacs/: charta-mode.el
examples/: README.md  fibo.ch  roman.ch  snake.ch  todo.ch
src/: CMakeLists.txt  builder.cpp  builder.hpp  checks.cpp  checks.hpp  ir.cpp  ir.hpp  main.cpp  make_c.cpp  make_c.hpp  mangler.cpp  mangler.hpp  parser.cpp  parser.hpp  traverser.cpp  traverser.hpp  utf.cpp  utf.hpp
tests/: core-fns.ch  types-1.ch  types-2.ch  types-3.ch
